# inductor-rs

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  pyproject.toml
aot_bridge/: CMakeLists.txt
aot_bridge/include/: aot_bridge.h
aot_bridge/src/: aot_bridge.cpp
config/: example.yaml
core/: Cargo.toml  build.rs
core/src/: cli.rs  config.rs  error.rs  lib.rs  main.rs
core/src/inference/: ffi.rs  mod.rs  model.rs
core/tests/: infer_dummy_model.rs
python/scripts/: check_backend.py  export_aot.py  generate_test_model.py
python/tests/: test_version.py
tests/fixtures/: input.json
