[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inductor-rs-tools"  # CUSTOMIZE: Change to your project name
version = "0.1.0"
description = "Python tools for AOT model export"
requires-python = ">=3.13"
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = [
    "safetensors",
    "pyyaml",
]
readme = "README.md"

[project.license]
text = "Apache-2.0"

[dependency-groups]
# Training dependencies - customize for your model
training = [
    "pandas",
    "matplotlib",
    "tqdm",
]

# AOT export dependencies (minimal)
export = []

# Development
dev = [
    "basedpyright",
    "ruff",
    "pytest",
]

# Backend-specific PyTorch dependency groups
backend-cpu = [
    "torch==2.10.0+cpu",
    "torchvision==0.25.0+cpu",
]

backend-cuda = [
    "torch==2.10.0+cu128",
    "torchvision==0.25.0+cu128",
]

backend-rocm = [
    "torch==2.10.0+rocm7.0",
    "torchvision==0.25.0+rocm7.0",
]

[tool.uv]
# Prefer system Python over downloading managed versions
python-preference = "only-system"
# Don't build this as a Python package - just install dependencies
package = false
index-strategy = "unsafe-best-match"
conflicts = [
    [{ group = "backend-cpu" }, { group = "backend-cuda" }],
    [{ group = "backend-cpu" }, { group = "backend-rocm" }],
    [{ group = "backend-cuda" }, { group = "backend-rocm" }],
]

# PyTorch indexes for different backends.
[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu128"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm7.0"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py313"
include = ["pyproject.toml", "python/scripts/**/*.py"]
exclude = ["_version.py"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.basedpyright]
include = ["python/scripts"]
exclude = ["**/__pycache__", "**/.pytest_cache"]
pythonVersion = "3.13"
pythonPlatform = "Linux"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["python/tests"]
python_files = ["test_*.py"]
