[package]
name = "inductor-rs"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "Template for running AOT-compiled PyTorch Inductor models in Rust"

[lib]
name = "inductor_rs"
path = "src/lib.rs"

[[bin]]
name = "inductor-rs"
path = "src/main.rs"

[dependencies]
# CLI and Configuration
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Tensor/Array
ndarray = { version = "0.16", features = ["rayon"] }

[build-dependencies]
cmake = "0.1"

[dev-dependencies]
approx = "0.5"
tempfile = "3.10"

[features]
default = []
# Enable CUDA support (requires CUDA toolkit and PyTorch with CUDA)
cuda = []
# Enable ROCm/HIP support (requires ROCm and PyTorch with ROCm)
rocm = []
